# project-template

./: Dockerfile  Makefile  pyproject.toml  requirements.txt
src/: cli.py
