[project]
name = "project-template"
version = "0.1.0"
description = "Template Python project using uv"
authors = [{ name = "Joanne Affolter", email = "jaffolter@deezer.com" }]
readme = "README.md"

requires-python = ">=3.9"

dependencies = [
    "pandas",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=8.4.2",
    "ruff>=0.14.4",
]

[tool.uv]
default-groups = ["dev"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]



